--- a/incognito/storyboard/Base.lproj/Main.storyboard
+++ b/incognito/storyboard/Base.lproj/Main.storyboard
@@ -762,19 +762,12 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4Z-8t-QyF">
-                                            <rect key="frame" x="112" y="20" width="83" height="21"/>
+                                            <rect key="frame" x="112" y="20" width="235" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Lorem ipsum" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IHE-WX-XJT">
-                                            <rect key="frame" x="16" y="75" width="340" height="59"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ3-8k-5Bk">
                                             <rect key="frame" x="27" y="336" width="44" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -786,9 +779,16 @@
                                             <state key="normal" image="comment_icon"/>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9PR-Rp-l2H">
-                                            <rect key="frame" x="112" y="49" width="176" height="17"/>
+                                            <rect key="frame" x="112" y="49" width="235" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fn3-JW-tzx">
+                                            <rect key="frame" x="16" y="83" width="343" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -798,7 +798,7 @@
                                     <outlet property="Avatar" destination="QiX-2b-YuR" id="q5s-ZE-Kpj"/>
                                     <outlet property="Username" destination="a4Z-8t-QyF" id="2sJ-Iq-TQm"/>
                                     <outlet property="location" destination="9PR-Rp-l2H" id="Q3m-3i-DbT"/>
-                                    <outlet property="test1" destination="IHE-WX-XJT" id="iZU-E6-Bwk"/>
+                                    <outlet property="textcontent" destination="fn3-JW-tzx" id="1Pa-Hd-Yqi"/>
                                     <segue destination="yyY-xx-bno" kind="show" identifier="showpost" id="NcW-Iq-gdd"/>
                                 </connections>
                             </tableViewCell>
@@ -812,7 +812,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3bt-Fp-ULO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4205.5" y="-681.5"/>
+            <point key="canvasLocation" x="4204" y="-682.3088455772114"/>
         </scene>
         <!--Post Detail View Controller-->
         <scene sceneID="CJx-IZ-iFN">
@@ -822,12 +822,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3ez-YD-81i">
-                                <rect key="frame" x="17" y="64" width="340" height="72"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAx-ya-7Gg">
                                 <rect key="frame" x="17" y="144" width="340" height="198"/>
                                 <subviews>
@@ -885,6 +879,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Pb-E7-Dtg">
+                                <rect key="frame" x="17" y="84" width="340" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -892,22 +893,17 @@
                             <constraint firstItem="MeY-NG-mYz" firstAttribute="bottom" secondItem="iQa-Uw-MkN" secondAttribute="bottom" constant="109" id="BZf-so-2Yw"/>
                             <constraint firstItem="iQa-Uw-MkN" firstAttribute="top" secondItem="WAx-ya-7Gg" secondAttribute="bottom" constant="21" id="S4X-Kx-SgL"/>
                             <constraint firstAttribute="bottom" secondItem="WAx-ya-7Gg" secondAttribute="bottom" constant="325" id="VgO-2P-s5R"/>
-                            <constraint firstItem="3ez-YD-81i" firstAttribute="top" secondItem="MeY-NG-mYz" secondAttribute="top" id="Wne-nC-lQm"/>
-                            <constraint firstItem="WAx-ya-7Gg" firstAttribute="trailing" secondItem="3ez-YD-81i" secondAttribute="trailing" id="YNM-yR-OhS"/>
                             <constraint firstItem="WAx-ya-7Gg" firstAttribute="centerX" secondItem="23i-eM-ADC" secondAttribute="centerX" id="Yvw-lT-cPb"/>
-                            <constraint firstItem="WAx-ya-7Gg" firstAttribute="leading" secondItem="3ez-YD-81i" secondAttribute="leading" id="c53-pL-ARC"/>
                             <constraint firstItem="WAx-ya-7Gg" firstAttribute="trailing" secondItem="iQa-Uw-MkN" secondAttribute="trailing" id="gNP-wm-sgV"/>
                             <constraint firstItem="WAx-ya-7Gg" firstAttribute="top" secondItem="23i-eM-ADC" secondAttribute="top" constant="144" id="luV-fO-2E9"/>
-                            <constraint firstItem="WAx-ya-7Gg" firstAttribute="top" secondItem="3ez-YD-81i" secondAttribute="bottom" constant="8" symbolic="YES" id="rf5-Ya-9kJ"/>
                             <constraint firstItem="WAx-ya-7Gg" firstAttribute="centerX" secondItem="iQa-Uw-MkN" secondAttribute="centerX" id="xbd-SC-w4a"/>
-                            <constraint firstItem="WAx-ya-7Gg" firstAttribute="top" secondItem="3ez-YD-81i" secondAttribute="bottom" constant="8" id="zrQ-Vr-rTo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MeY-NG-mYz"/>
                     </view>
                     <connections>
-                        <outlet property="TextContent" destination="3ez-YD-81i" id="TKW-Lj-2bz"/>
                         <outlet property="pageControl" destination="Q7v-A2-IUP" id="UHZ-mn-bA8"/>
                         <outlet property="scrollview" destination="WAx-ya-7Gg" id="9dl-OX-faW"/>
+                        <outlet property="textContent" destination="3Pb-E7-Dtg" id="LGS-sF-8Pk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T78-3T-c4F" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1138,7 +1134,7 @@
         <image name="wallpaper" width="640" height="1136"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3mC-eT-NRS"/>
+        <segue reference="G46-JA-RMv"/>
         <segue reference="wjO-qC-Z7y"/>
         <segue reference="nbg-eP-0CS"/>
     </inferredMetricsTieBreakers>
